feat: JPA Auditing 기능 적용을 위한 BaseTimeEntity와 BaseEntity 추가
- 공통 엔티티 속성 관리 클래스 BaseTimeEntity 추가
  - 생성일자(createdDate) 및 수정일자(lastModifiedDate) 필드 추가
  - @MappedSuperclass 및 @EntityListeners(AuditingEntityListener.class) 사용
- BaseEntity 클래스 추가
  - BaseTimeEntity 상속 및 작성자(createdBy)와 수정자(lastModifiedBy) 필드 추가
  - @CreatedBy와 @LastModifiedBy 어노테이션으로 생성자 및 수정자 자동 설정
- JPA Auditing 기능을 통해 엔티티의 생성 및 수정 시각과 작성자 정보를 자동으로 관리할 수 있도록 설정